fixed body overflow removed uncss from gulp updated howto link

--- a/src/assets/scss/app.scss
+++ b/src/assets/scss/app.scss
@@ -17,8 +17,8 @@ body {
     width: 100%;
     height: 100%;
     margin: 0px;
-    overflow-y: hidden;
-    overflow-x: auto;
+    overflow-y: auto;
+    overflow-x: hidden;
 }
 
 canvas {
